# mimesis

./: CMakeLists.txt  LICENSE2  README.md
src/: charset.cpp  charset.hpp  mimesis.cpp  mimesis.hpp
test/: load-parse-test.cpp
